# tof-simulator

./: .readthedocs.yaml  README.rst  pyproject.toml  setup.py  teoria.tex  tof_gtk.desktop
doc/: Makefile
doc/source/: conf.py  examples.rst  installation.rst  interactivo.rst  modules.rst  tofsim.rst
doc/source/_static/: pygm_overrides.css
doc/source/locale/en/LC_MESSAGES/: ejemplo1.mo  ejemplo1.po  example2.mo  example2.po  examples.po  index.mo  index.po  installation.mo  installation.po  interactivo.mo  interactivo.po  teoria.mo  teoria.po  tofsim.mo
docs/: ejemplo1.html  example2.html  examples.html  genindex.html  index.html  installation.html  interactivo.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  teoria.html  tofsim.html
docs/_sources/: ejemplo1.rst.txt  example2.rst.txt
docs/_static/: documentation_options.js
docs/es/: ejemplo1.html  example2.html  examples.html  genindex.html  index.html  installation.html  interactivo.html  language.html  objects.inv  py-modindex.html  search.html  searchindex.js  teoria.html  tofsim.html
docs/es/_sources/: example2.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  language.rst.txt  teoria.rst.txt
docs/es/_static/: documentation_options.js
examples/: Makefile  ejemplo1.ipynb  ejemplo2.ipynb  example1.ipynb  example2.ipynb  example2.py  fit_times_tof.py  peaks.py
scripts/: tof_gtk
tofsim/: __init__.py  nist_elem.py  tof.conf  tof.py  tof_gtk.py  tof_gtk.ui  tof_gtk.xml  version.py
tofsim/gtk/: tof_gtk.py
tofsim/stl/: app.py  tof_stl.py
(+15 files in other folders)
